--- a/package.json
+++ b/package.json
@@ -6,20 +6,27 @@
     "@emotion/react": "^11.10.8",
     "@mantine/core": "^6.0.9",
     "@mantine/ds": "^6.0.9",
+    "@mantine/form": "^6.0.10",
     "@mantine/hooks": "^6.0.9",
     "@tabler/icons": "^2.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.2.2",
+    "@types/react-dom": "^18.2.3",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "tabler-icons-react": "^1.56.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
