--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "job-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Nadyushka.github.io/job-search-project",
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@mantine/core": "^6.0.9",
@@ -21,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
     "jest": "27.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
