--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mantine/ds": "^6.0.9",
     "@mantine/form": "^6.0.10",
     "@mantine/hooks": "^6.0.9",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons": "^2.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
