--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.4.0",
     "gh-pages": "^5.0.0",
@@ -30,6 +31,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
     "tabler-icons-react": "^1.56.0",
     "typescript": "^4.4.2",
